[metadata]
name = GrabAirline
summary = GrabAirline
description-file =
    README.md
author = huntinux 
author-email = huntinux@gmail.com
home-page = https://github.com/huntinux/747
classifier =
    Environment :: Linux
    Intended Audience :: Python developer
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    GrabAirline 

[entry_points] 
console_scripts = 
    grab_airline = GrabAirline.airlist:runner
    get_page = CrabAirline.getpage:grab_page_info
#    qmonitor_collector = QMonitorCollector.Collector:runner
#    qmonitor_http_interface = QMonitorCollector.www.manage:runner
#    qmonitor_flush = QMonitorCollector.Client:QMonitorClient.sendFlush
#    qmonitor_heart_beat = QMonitorCollector.Client:heart_beat
            

